card preview js, cleanup event listeners

--- a/src/http/views/card.hbs
+++ b/src/http/views/card.hbs
@@ -107,4 +107,5 @@
 
 {{>pagination}}
 
+<script src="/public/js/cardPreview.js" defer></script>
 <script src="/public/js/updateInventory.js" defer></script>
