--- a/src/http/views/set.hbs
+++ b/src/http/views/set.hbs
@@ -245,5 +245,6 @@
 
 {{>pagination}}
 
+<script src="/public/js/cardPreview.js" defer></script>
 <script src="/public/js/updateInventory.js" defer></script>
 <script src="/public/js/setPriceInfo.js" defer></script>
