--- a/src/http/views/inventory.hbs
+++ b/src/http/views/inventory.hbs
@@ -51,4 +51,5 @@
 
 {{>pagination}}
 
+<script src="/public/js/cardPreview.js" defer></script>
 <script src="/public/js/updateInventory.js" defer></script>
