--- a/src/http/views/inventory.hbs
+++ b/src/http/views/inventory.hbs
@@ -14,8 +14,8 @@
                 {{#each cards as |card|}}
                 <tr class="table-row">
                     <td class="pl-2">{{>cardsOwned card=card}}</td>
-                    <td class="card-name-link" data-id="{{card.cardId}}" data-img-src="{{card.imgSrc}}">
-                        <a href="{{card.url}}">{{card.name}}</a>
+                    <td data-id="{{card.cardId}}" data-img-src="{{card.imgSrc}}">
+                        <a href="{{card.url}}" class="card-name-link">{{card.name}}</a>
                         {{>tags item=card}}
                         <a href="{{card.url}}" class="card-img-link">
                             <img src="{{card.imgSrc}}" alt="{{card.name}}" class="card-img-preview" />
