--- a/src/http/views/set.hbs
+++ b/src/http/views/set.hbs
@@ -210,8 +210,8 @@
                     {{>inventoryCtrl card=this}}
                 </td>
                 <td class="py-2">{{this.number}}</td>
-                <td class="card-name-link py-2" data-id="{{this.cardId}}" data-img-src="{{this.imgSrc}}">
-                    <a href="{{this.url}}">{{this.name}}</a>
+                <td data-id="{{this.cardId}}" data-img-src="{{this.imgSrc}}" class="py-2">
+                    <a href="{{this.url}}" class="card-name-link">{{this.name}}</a>
                     {{>tags item=this}}
                     <a href="{{this.url}}" class="card-img-link">
                         <img src="{{this.imgSrc}}" alt="{{this.name}}" class="card-img-preview" />
