--- a/src/http/views/card.hbs
+++ b/src/http/views/card.hbs
@@ -79,8 +79,8 @@
                 {{#each otherPrintings as |p|}}
                 <tr class="table-row">
                     <td class="set-icon pl-2 py-2"><i class="ss ss-{{p.setCode}}"></i></td>
-                    <td class="card-name-link py-2" data-id="{{p.cardId}}" data-img-src="{{p.imgSrc}}">
-                        <a href="{{p.url}}">{{p.name}}</a>
+                    <td data-id="{{p.cardId}}" data-img-src="{{p.imgSrc}}" class="py-2">
+                        <a href="{{p.url}}" class="card-name-link">{{p.name}}</a>
                         <a href="{{p.url}}" class="card-img-link">
                             <img src="{{p.imgSrc}}" alt="{{p.name}}" class="card-img-preview" />
                         </a>
@@ -107,4 +107,5 @@
 
 {{>pagination}}
 
+<script src="/public/js/cardPreview.js" defer></script>
 <script src="/public/js/updateInventory.js" defer></script>
