--- a/src/http/views/inventory.hbs
+++ b/src/http/views/inventory.hbs
@@ -49,7 +49,7 @@
     </div>
 </section>
 
-{{>pagination}}
+{{>pagination hasItems=this.cards.length}}
 
 <script src="/public/js/cardPreview.js" defer></script>
 <script src="/public/js/updateInventory.js" defer></script>
