--- a/src/http/views/partials/pagination.hbs
+++ b/src/http/views/partials/pagination.hbs
@@ -1,3 +1,4 @@
+{{#if hasItems}}
 <section class="pagination-container">
 
     {{#if pagination.previous}}
@@ -42,3 +43,4 @@
         <label for="limit" class="text-sm font-medium text-teal-700">per page</label>
     </form>
 </section>
+{{/if}}
