dynamic pag sctn, other printings

--- a/src/http/views/set.hbs
+++ b/src/http/views/set.hbs
@@ -243,7 +243,7 @@
     </table>
 </div>
 
-{{>pagination hasItems=this.cards.length}}
+{{>pagination hasItems=set.cards.length}}
 
 <script src="/public/js/cardPreview.js" defer></script>
 <script src="/public/js/updateInventory.js" defer></script>
