other printings hide pag if lt 2

--- a/src/http/views/card.hbs
+++ b/src/http/views/card.hbs
@@ -103,7 +103,9 @@
                 {{/each}}
             </tbody>
         </table>
+        {{#if (gt pagination.total 1)}}
         {{>pagination hasItems=otherPrintings.length}}
+        {{/if}}
     </section>
     {{/if}}
 </div>
