--- a/src/http/views/partials/setList.hbs
+++ b/src/http/views/partials/setList.hbs
@@ -6,10 +6,12 @@
         <a href="{{baseOnlyToggle.url}}" 
            class="btn {{#if baseOnlyToggle.isBaseOnly}}btn-secondary{{else}}btn-primary{{/if}} 
                   whitespace-nowrap h-[42px] flex items-center justify-center flex-shrink-0
-                  mb-4">
+                  mb-4"
+           style="padding-top: 0; padding-bottom: 0; line-height: 1;">
             {{baseOnlyToggle.text}}
         </a>
     </div>
+    {{#if setList.length}}
     <table class="min-w-full bg-white">
         <thead>{{>tableHeadersRow}}</thead>
         <tbody>
@@ -29,5 +31,10 @@
             {{/each}}
         </tbody>
     </table>
+    {{else}}
+    <div class="text-center py-8 text-gray-500">
+        No sets found matching your filter.
+    </div>
+    {{/if}}
 </div>
 {{>pagination hasItems=setList.length}}
