--- a/src/http/views/inventory.hbs
+++ b/src/http/views/inventory.hbs
@@ -11,12 +11,14 @@
             <div class="flex-1">
                 {{>filter}}
             </div>
+            {{#if baseOnlyToggle.visible}}
             <a href="{{baseOnlyToggle.url}}" 
                class="btn {{#if baseOnlyToggle.isBaseOnly}} btn-secondary {{else}} btn-primary {{/if}}
                       whitespace-nowrap h-[42px] flex items-center justify-center flex-shrink-0 mb-4"
                style="padding-top: 0; padding-bottom: 0; line-height: 1;">
                 {{baseOnlyToggle.text}}
             </a>
+            {{/if}}
         </div>
         <table class="table-container w-full">
             <thead>{{>tableHeadersRow}}</thead>
