--- a/src/http/views/set.hbs
+++ b/src/http/views/set.hbs
@@ -213,46 +213,54 @@
         </a>
         {{/if}}
     </div>
-    <table class="table-container">
-        <thead>{{>tableHeadersRow}}</thead>
-        <tbody>
-            {{#each set.cards}}
-            <tr class="table-row">
-                <td class="py-2 pl-2">
-                    {{>inventoryCtrl card=this}}
-                </td>
-                <td class="py-2">{{this.number}}</td>
-                <td data-id="{{this.cardId}}" data-img-src="{{this.imgSrc}}" class="py-2">
-                    <a href="{{this.url}}" class="card-name-link">{{this.name}}</a>
-                    {{>tags item=this}}
-                    <a href="{{this.url}}" class="card-img-link">
-                        <img src="{{this.imgSrc}}" alt="{{this.name}}" class="card-img-preview" />
-                    </a>
-                </td>
-                <td class="py-2 xs-hide">{{>manaCost card=this}}</td>
-                <td class="py-2 xs-hide">{{this.rarity}}</td>
-                <td class="py-2 xs-hide">
-                    {{#if this.hasNormal}}
-                    <span class="price-normal">{{this.normalPrice}}</span>
-                    {{/if}}
-                </td>
-                <td class="py-2 pr-2 xs-hide">
-                    {{#if this.hasFoil}}
-                    <span class="price-foil">{{this.foilPrice}}</span>
-                    {{/if}}
-                </td>
-                <td class="py-2 pr-2 xs-show">
-                    {{#if this.hasFoil}}
-                    <span class="price-foil">{{this.foilPrice}}</span>
-                    {{/if}}
-                    {{#if this.hasNormal}}
-                    <span class="price-normal">{{this.normalPrice}}</span>
-                    {{/if}}
-                </td>
-            </tr>
-            {{/each}}
-        </tbody>
-    </table>
+    <div id="filter-results">
+        {{#if set.cards.length}}
+        <table class="table-container">
+            <thead>{{>tableHeadersRow}}</thead>
+            <tbody>
+                {{#each set.cards}}
+                <tr class="table-row">
+                    <td class="py-2 pl-2">
+                        {{>inventoryCtrl card=this}}
+                    </td>
+                    <td class="py-2">{{this.number}}</td>
+                    <td data-id="{{this.cardId}}" data-img-src="{{this.imgSrc}}" class="py-2">
+                        <a href="{{this.url}}" class="card-name-link">{{this.name}}</a>
+                        {{>tags item=this}}
+                        <a href="{{this.url}}" class="card-img-link">
+                            <img src="{{this.imgSrc}}" alt="{{this.name}}" class="card-img-preview" />
+                        </a>
+                    </td>
+                    <td class="py-2 xs-hide">{{>manaCost card=this}}</td>
+                    <td class="py-2 xs-hide">{{this.rarity}}</td>
+                    <td class="py-2 xs-hide">
+                        {{#if this.hasNormal}}
+                        <span class="price-normal">{{this.normalPrice}}</span>
+                        {{/if}}
+                    </td>
+                    <td class="py-2 pr-2 xs-hide">
+                        {{#if this.hasFoil}}
+                        <span class="price-foil">{{this.foilPrice}}</span>
+                        {{/if}}
+                    </td>
+                    <td class="py-2 pr-2 xs-show">
+                        {{#if this.hasFoil}}
+                        <span class="price-foil">{{this.foilPrice}}</span>
+                        {{/if}}
+                        {{#if this.hasNormal}}
+                        <span class="price-normal">{{this.normalPrice}}</span>
+                        {{/if}}
+                    </td>
+                </tr>
+                {{/each}}
+            </tbody>
+        </table>
+        {{else}}
+        <div class="text-center py-8 text-gray-500">
+            No cards found matching your filter.
+        </div>
+        {{/if}}
+    </div>
 </div>
 
 {{>pagination hasItems=set.cards.length}}
