--- a/src/http/views/card.hbs
+++ b/src/http/views/card.hbs
@@ -103,7 +103,7 @@
                 {{/each}}
             </tbody>
         </table>
-        {{#if (gt pagination.total 1)}}
+        {{#if (gt pagination.totalPages 1)}}
         {{>pagination hasItems=otherPrintings.length}}
         {{/if}}
     </section>
