--- a/src/http/views/set.hbs
+++ b/src/http/views/set.hbs
@@ -12,7 +12,7 @@
             <li class="text-gray-700">Release Date: {{set.releaseDate}}</li>
             <li class="text-gray-700">Set Price: {{set.prices.defaultPrice}}</li>
             {{#if authenticated}}
-            <li class="text-gray-700">Total Owned: {{set.ownedTotal}}/{{set.baseSize}}</li>
+            <li class="text-gray-700">Total Owned: {{set.ownedTotal}}/{{set.effectiveSize}}</li>
             <li class="text-gray-700">Owned Value: {{set.ownedValue}}</li>
             <li class="text-gray-700">{{>completionRate set}}</li>
             {{/if}}
@@ -200,47 +200,67 @@
 </div>
 
 <div class="w-full mx-auto">
-    {{>filter}}
-    <table class="table-container">
-        <thead>{{>tableHeadersRow}}</thead>
-        <tbody>
-            {{#each set.cards}}
-            <tr class="table-row">
-                <td class="py-2 pl-2">
-                    {{>inventoryCtrl card=this}}
-                </td>
-                <td class="py-2">{{this.number}}</td>
-                <td data-id="{{this.cardId}}" data-img-src="{{this.imgSrc}}" class="py-2">
-                    <a href="{{this.url}}" class="card-name-link">{{this.name}}</a>
-                    {{>tags item=this}}
-                    <a href="{{this.url}}" class="card-img-link">
-                        <img src="{{this.imgSrc}}" alt="{{this.name}}" class="card-img-preview" />
-                    </a>
-                </td>
-                <td class="py-2 xs-hide">{{>manaCost card=this}}</td>
-                <td class="py-2 xs-hide">{{this.rarity}}</td>
-                <td class="py-2 xs-hide">
-                    {{#if this.hasNormal}}
-                    <span class="price-normal">{{this.normalPrice}}</span>
-                    {{/if}}
-                </td>
-                <td class="py-2 pr-2 xs-hide">
-                    {{#if this.hasFoil}}
-                    <span class="price-foil">{{this.foilPrice}}</span>
-                    {{/if}}
-                </td>
-                <td class="py-2 pr-2 xs-show">
-                    {{#if this.hasFoil}}
-                    <span class="price-foil">{{this.foilPrice}}</span>
-                    {{/if}}
-                    {{#if this.hasNormal}}
-                    <span class="price-normal">{{this.normalPrice}}</span>
-                    {{/if}}
-                </td>
-            </tr>
-            {{/each}}
-        </tbody>
-    </table>
+    <div class="flex items-center gap-2">
+        <div class="flex-1">
+            {{>filter}}
+        </div>
+        {{#if baseOnlyToggle.visible}}
+        <a href="{{baseOnlyToggle.url}}" 
+           class="btn {{#if baseOnlyToggle.isBaseOnly}} btn-secondary {{else}} btn-primary {{/if}}
+                  whitespace-nowrap h-[42px] flex items-center justify-center flex-shrink-0 mb-4"
+           style="padding-top: 0; padding-bottom: 0; line-height: 1;">
+            {{baseOnlyToggle.text}}
+        </a>
+        {{/if}}
+    </div>
+    <div id="filter-results">
+        {{#if set.cards.length}}
+        <table class="table-container">
+            <thead>{{>tableHeadersRow}}</thead>
+            <tbody>
+                {{#each set.cards}}
+                <tr class="table-row">
+                    <td class="py-2 pl-2">
+                        {{>inventoryCtrl card=this}}
+                    </td>
+                    <td class="py-2">{{this.number}}</td>
+                    <td data-id="{{this.cardId}}" data-img-src="{{this.imgSrc}}" class="py-2">
+                        <a href="{{this.url}}" class="card-name-link">{{this.name}}</a>
+                        {{>tags item=this}}
+                        <a href="{{this.url}}" class="card-img-link">
+                            <img src="{{this.imgSrc}}" alt="{{this.name}}" class="card-img-preview" />
+                        </a>
+                    </td>
+                    <td class="py-2 xs-hide">{{>manaCost card=this}}</td>
+                    <td class="py-2 xs-hide">{{this.rarity}}</td>
+                    <td class="py-2 xs-hide">
+                        {{#if this.hasNormal}}
+                        <span class="price-normal">{{this.normalPrice}}</span>
+                        {{/if}}
+                    </td>
+                    <td class="py-2 pr-2 xs-hide">
+                        {{#if this.hasFoil}}
+                        <span class="price-foil">{{this.foilPrice}}</span>
+                        {{/if}}
+                    </td>
+                    <td class="py-2 pr-2 xs-show">
+                        {{#if this.hasFoil}}
+                        <span class="price-foil">{{this.foilPrice}}</span>
+                        {{/if}}
+                        {{#if this.hasNormal}}
+                        <span class="price-normal">{{this.normalPrice}}</span>
+                        {{/if}}
+                    </td>
+                </tr>
+                {{/each}}
+            </tbody>
+        </table>
+        {{else}}
+        <div class="text-center py-8 text-gray-500">
+            No cards found matching your filter.
+        </div>
+        {{/if}}
+    </div>
 </div>
 
 {{>pagination hasItems=set.cards.length}}
