--- a/src/http/views/verificationResult.hbs
+++ b/src/http/views/verificationResult.hbs
@@ -1,16 +1,9 @@
-<div class="verification-container">
-    <h2 class="page-title">Email Verification</h2>
-    <div class="section-container">
-        {{#if success}}
-            <div class="bg-success p-4 rounded mb-4">
-                <p>{{ message }}</p>
-            </div>
-            <a href="/user" class="btn btn-primary">Go to Profile</a>
-        {{else}}
-            <div class="bg-error p-4 rounded mb-4">
-                <p>{{ message }}</p>
-            </div>
-            <a href="/user/create" class="btn btn-primary">Sign Up Again</a>
-        {{/if}}
+<div class='verification-container'>
+    <h2 class='page-title'>Email Verification</h2>
+    <div class='section-container'>
+        <div class='bg-error p-4 rounded mb-4'>
+            <p>{{message}}</p>
+        </div>
+        <a href='/user/create' class='btn btn-primary'>Sign Up Again</a>
     </div>
 </div>
