--- a/src/http/views/user.hbs
+++ b/src/http/views/user.hbs
@@ -1,9 +1,3 @@
-{{#if welcome}}
-    <div class='bg-success p-4 rounded mb-4'>
-        <p>Welcome! Your email has been verified and your account is ready to go.</p>
-    </div>
-{{/if}}
-
 <div class='settings-container'>
     <h2 class='page-title'>User Settings</h2>
 
@@ -54,25 +48,4 @@
         <button id='delete-user-btn' class='btn btn-tertiary' type='submit'>Delete User</button>
     </div>
 </div>
-<script>
-    async function updateMessage(response, messageEl, method) {
-    messageEl.classList.remove("bg-info", "bg-success", "bg-error"); if (response.ok) { const result
-    = await response.json(); const className = result.status ? `bg-${result.status}` : "bg-info";
-    messageEl.textContent = result.message; console.log(`Status from user.hbs: ${result.status}`);
-    messageEl.classList.add(className); } else { messageEl.textContent = `Failed to ${method} user`;
-    messageEl.classList.add("bg-error"); } } const messageEl =
-    document.getElementById("response-message");
-    document.getElementById("user-update-form").addEventListener("submit", async (event) => {
-    event.preventDefault(); const formData = new FormData(event.target); const data =
-    Object.fromEntries(formData.entries()); const response = await fetch("/user", { method: "PATCH",
-    headers: { "Content-Type": "application/json", }, body: JSON.stringify(data), });
-    updateMessage(response, messageEl, "update"); });
-    document.getElementById("password-update-form").addEventListener("submit", async (event) => {
-    event.preventDefault(); const formData = new FormData(event.target); const data =
-    Object.fromEntries(formData.entries()); const response = await fetch("/user/password", { method:
-    "PATCH", headers: { "Content-Type": "application/json", }, body: JSON.stringify(data), });
-    updateMessage(response, messageEl, "update"); });
-    document.getElementById("delete-user-btn").addEventListener("click", async (event) => {
-    event.preventDefault(); const response = await fetch(`/user`, { method: "DELETE", });
-    updateMessage(response, messageEl, "delete"); });
-</script>
+<script src='/js/user-settings.js'></script>
