--- a/src/http/views/login.hbs
+++ b/src/http/views/login.hbs
@@ -14,7 +14,7 @@
         <button id="login-btn" class="btn btn-primary" type="submit">Login</button>
     </form>
     <div class="mt-4 text-center">
-        <a href="#" class="link">
+        <a href="/auth/forgot-password" class="link">
             Forgot your password?
         </a>
     </div>
