--- a/src/http/views/forgotPassword.hbs
+++ b/src/http/views/forgotPassword.hbs
@@ -1,10 +1,10 @@
 <div class="login-container">
     <h3 class="page-title">Forgot Your Password?</h3>
     <p class="page-subtitle">Enter your email address and we'll send you a link to reset your password.</p>
-    <form id="forgot-password-form" class="mt-6" action="/auth/forgot-password" method="post">
+    <form id="forgot-password-form" class="mt-6" action="/auth/forgot-password" method="post" novalidate>
         <div class="mb-4">
             <label class="input-label" for="user-email">Email</label>
-            <input id="user-email" class="input-field" type="email" name="email" required />
+            <input id="user-email" class="input-field" type="email" name="email" required maxlength="255" />
         </div>
         <button id="forgot-password-btn" class="btn btn-primary" type="submit">Send Reset Link</button>
     </form>
@@ -14,3 +14,16 @@
         </a>
     </div>
 </div>
+<script src="/public/js/form-validation.js"></script>
+<script>
+    (function () {
+        var FV = window.FormValidator;
+        var emailEl = document.getElementById('user-email');
+
+        FV.attachBlurValidation(emailEl, FV.validateEmail);
+
+        document.getElementById('forgot-password-form').addEventListener('submit', function (e) {
+            if (!FV.validateField(emailEl, FV.validateEmail)) e.preventDefault();
+        });
+    })();
+</script>
