--- a/src/http/views/user.hbs
+++ b/src/http/views/user.hbs
@@ -3,7 +3,7 @@
 
     <div class='section-container'>
         <h3 class='page-subtitle'>Edit Profile</h3>
-        <form id='user-update-form' class='mt-6'>
+        <form id='user-update-form' class='mt-6' novalidate>
             <div class='mb-4'>
                 <label class='input-label' for='user-name'>User Name</label>
                 <input
@@ -35,7 +35,7 @@
     </div>
     <div class='section-container'>
         <h3 class='page-subtitle'>Change Password</h3>
-        <form id='password-update-form' class='mt-6'>
+        <form id='password-update-form' class='mt-6' novalidate>
             <div class='mb-4'>
                 <label class='input-label' for='new-password'>New Password</label>
                 <input
