--- a/src/http/views/user.hbs
+++ b/src/http/views/user.hbs
@@ -3,7 +3,7 @@
 
     <div class='section-container'>
         <h3 class='page-subtitle'>Edit Profile</h3>
-        <form id='user-update-form' class='mt-6'>
+        <form id='user-update-form' class='mt-6' novalidate>
             <div class='mb-4'>
                 <label class='input-label' for='user-name'>User Name</label>
                 <input
@@ -12,6 +12,10 @@
                     type='text'
                     name='name'
                     value='{{user.name}}'
+                    required
+                    minlength='6'
+                    maxlength='50'
+                    pattern='^[a-zA-Z0-9 _-]+$'
                 />
             </div>
             <div class='mb-4'>
@@ -22,6 +26,8 @@
                     type='email'
                     name='email'
                     value='{{user.email}}'
+                    required
+                    maxlength='255'
                 />
             </div>
             <button id='update-user-btn' class='btn btn-primary' type='submit'>Submit</button>
@@ -29,7 +35,7 @@
     </div>
     <div class='section-container'>
         <h3 class='page-subtitle'>Change Password</h3>
-        <form id='password-update-form' class='mt-6'>
+        <form id='password-update-form' class='mt-6' novalidate>
             <div class='mb-4'>
                 <label class='input-label' for='new-password'>New Password</label>
                 <input
@@ -38,7 +44,10 @@
                     type='password'
                     name='password'
                     required
+                    minlength='8'
+                    maxlength='128'
                 />
+                <p class='password-requirements'>Min 8 characters: 1 uppercase, 1 lowercase, 1 number, 1 special character</p>
             </div>
             <button id='update-password-btn' class='btn btn-secondary' type='submit'>Update Password</button>
         </form>
@@ -48,4 +57,5 @@
         <button id='delete-user-btn' class='btn btn-tertiary' type='submit'>Delete User</button>
     </div>
 </div>
-<script src='/js/user-settings.js'></script>
+<script src='/public/js/form-validation.js'></script>
+<script src='/public/js/user-settings.js'></script>
