--- a/src/http/public/css/tailwind.css
+++ b/src/http/public/css/tailwind.css
@@ -2213,6 +2213,10 @@ select {
     max-width: 80rem;
 }
 
+.max-w-md {
+    max-width: 28rem;
+}
+
 .flex-1 {
     flex: 1 1 0%;
 }
@@ -2485,6 +2489,11 @@ select {
     padding-bottom: 0.375rem;
 }
 
+.py-16 {
+    padding-top: 4rem;
+    padding-bottom: 4rem;
+}
+
 .py-2 {
     padding-top: 0.5rem;
     padding-bottom: 0.5rem;
@@ -2498,11 +2507,6 @@ select {
 .py-4 {
     padding-top: 1rem;
     padding-bottom: 1rem;
-}
-
-.py-8 {
-    padding-top: 2rem;
-    padding-bottom: 2rem;
 }
 
 .pb-4 {
@@ -2551,6 +2555,16 @@ select {
 .text-3xl {
     font-size: 1.875rem;
     line-height: 2.25rem;
+}
+
+.text-4xl {
+    font-size: 2.25rem;
+    line-height: 2.5rem;
+}
+
+.text-5xl {
+    font-size: 3rem;
+    line-height: 1;
 }
 
 .text-lg {
@@ -2605,14 +2619,14 @@ select {
     letter-spacing: 0.025em;
 }
 
+.text-gray-300 {
+    --tw-text-opacity: 1;
+    color: rgb(209 213 219 / var(--tw-text-opacity, 1));
+}
+
 .text-gray-400 {
     --tw-text-opacity: 1;
     color: rgb(156 163 175 / var(--tw-text-opacity, 1));
-}
-
-.text-gray-500 {
-    --tw-text-opacity: 1;
-    color: rgb(107 114 128 / var(--tw-text-opacity, 1));
 }
 
 .text-gray-600 {
@@ -2643,6 +2657,11 @@ select {
 .text-purple-900 {
     --tw-text-opacity: 1;
     color: rgb(83 43 100 / var(--tw-text-opacity, 1));
+}
+
+.text-teal-300 {
+    --tw-text-opacity: 1;
+    color: rgb(110 218 209 / var(--tw-text-opacity, 1));
 }
 
 .text-teal-500 {
